--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 "react-dom": "^18.2.0",
 "framer-motion": "^11.0.0"
 },
-"devDependencies": {
+"devDependencies": {"vite": "^5.0.0",
+  "@vitejs/plugin-react": "^4.0.0"
 "autoprefixer": "^10.4.17",
 "postcss": "^8.4.34",
 "tailwindcss": "^3.4.1",
