--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-"name": "play-win-vegas",
-"version": "1.0.0",
-"private": true,
-"scripts": {
-"dev": "vite",
-"build": "vite build",
-"preview": "vite preview"
-},
-"dependencies": {
-"firebase": "^10.12.2",
-"lucide-react": "^0.306.0",
-"react": "^18.2.0",
-"react-dom": "^18.2.0",
-"framer-motion": "^11.0.0"
-},
-"devDependencies": {"vite": "^5.0.0",
-  "@vitejs/plugin-react": "^4.0.0"
-"autoprefixer": "^10.4.17",
-"postcss": "^8.4.34",
-"tailwindcss": "^3.4.1",
-"vite": "^5.2.0"
+  "name": "play-win-vegas",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "firebase": "^10.0.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.270.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.0.0"
+  }
 }
-} 
